# ctc-compiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_runtime.sh  building.md  contributing.md  format.sh
compiler/: CtcLang.interp  CtcLang.tokens  CtcLangBaseVisitor.cpp  CtcLangBaseVisitor.h  CtcLangErrorListener.h  CtcLangLexer.cpp  CtcLangLexer.h  CtcLangLexer.interp  CtcLangParser.cpp  CtcLangParser.h  CtcLangVisitor.cpp  CtcLangVisitor.h  CtcLexer.cpp  CtcLexer.h  CtcLexer.interp  CtcLexer.tokens  ctc.interp  ctc.tokens  ctcBaseVisitor.cpp  ctcBaseVisitor.h  ctcLexer.cpp  ctcLexer.h  ctcLexer.interp  ctcLexer.tokens  ctcParser.cpp  ctcParser.h  ctcVisitor.cpp  ctcVisitor.h  free_frontend.sh  main.cpp
compiler-front/: CtcLang.g4  build_frontend.sh  ctc.g4
compiler-runtime/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
compiler-runtime/demo/Linux/: main.cpp
compiler-runtime/demo/Mac/antlr4-cpp-demo/: main.cpp
compiler-runtime/demo/Windows/antlr4-cpp-demo/: main.cpp
compiler-runtime/runtime/: CTestTestfile.cmake  Makefile  antlr4_tests[1]_include.cmake  cmake_install.cmake
compiler-runtime/runtime/src/: ANTLRErrorListener.h  ANTLRErrorStrategy.h  ANTLRFileStream.cpp  ANTLRFileStream.h  ANTLRInputStream.cpp  ANTLRInputStream.h  BailErrorStrategy.cpp  BailErrorStrategy.h  BaseErrorListener.cpp  BaseErrorListener.h  BufferedTokenStream.cpp  BufferedTokenStream.h  CharStream.cpp  CharStream.h  CommonToken.cpp  CommonToken.h  CommonTokenFactory.cpp  CommonTokenFactory.h  CommonTokenStream.cpp  CommonTokenStream.h  ConsoleErrorListener.cpp  ConsoleErrorListener.h  DefaultErrorStrategy.cpp  DefaultErrorStrategy.h  DiagnosticErrorListener.cpp  DiagnosticErrorListener.h  Exceptions.cpp  Exceptions.h  FailedPredicateException.cpp  FailedPredicateException.h  FlatHashMap.h  FlatHashSet.h  InputMismatchException.cpp  InputMismatchException.h  IntStream.h  InterpreterRuleContext.cpp  InterpreterRuleContext.h  Lexer.cpp  Lexer.h  LexerInterpreter.cpp  (+45 more)
compiler-runtime/runtime/src/atn/: ATN.cpp  ATN.h  ATNConfig.cpp  ATNConfig.h  ATNConfigSet.cpp  ATNConfigSet.h  ATNDeserializationOptions.cpp  ATNDeserializationOptions.h  ATNDeserializer.cpp  ATNDeserializer.h  ATNSimulator.cpp  ATNSimulator.h  ATNState.cpp  ATNState.h  ATNStateType.cpp  ATNStateType.h  ATNType.h  ActionTransition.cpp  ActionTransition.h  AmbiguityInfo.cpp  AmbiguityInfo.h  ArrayPredictionContext.cpp  ArrayPredictionContext.h  AtomTransition.cpp  AtomTransition.h  BasicBlockStartState.h  BasicState.h  BlockEndState.h  BlockStartState.h  ContextSensitivityInfo.cpp  ContextSensitivityInfo.h  DecisionEventInfo.cpp  DecisionEventInfo.h  DecisionInfo.cpp  DecisionInfo.h  DecisionState.cpp  DecisionState.h  EpsilonTransition.cpp  EpsilonTransition.h  ErrorInfo.cpp  (+88 more)
compiler-runtime/runtime/src/dfa/: DFA.cpp  DFA.h  DFASerializer.cpp  DFASerializer.h  DFAState.cpp  DFAState.h  LexerDFASerializer.cpp  LexerDFASerializer.h
compiler-runtime/runtime/src/internal/: Synchronization.cpp  Synchronization.h
compiler-runtime/runtime/src/misc/: InterpreterDataReader.cpp  InterpreterDataReader.h  Interval.cpp  Interval.h  IntervalSet.cpp  IntervalSet.h  MurmurHash.cpp  MurmurHash.h  Predicate.h
compiler-runtime/runtime/src/support/: Any.h  Arrays.cpp  Arrays.h  BitSet.h  CPPUtils.cpp  CPPUtils.h  Casts.h  Declarations.h  StringUtils.cpp  StringUtils.h  Unicode.h  Utf8.cpp  Utf8.h
compiler-runtime/runtime/src/tree/: AbstractParseTreeVisitor.h  ErrorNode.h  ErrorNodeImpl.cpp  ErrorNodeImpl.h  IterativeParseTreeWalker.cpp  IterativeParseTreeWalker.h  ParseTree.cpp  ParseTree.h  ParseTreeListener.cpp  ParseTreeListener.h  ParseTreeProperty.h  ParseTreeType.h  ParseTreeVisitor.cpp  ParseTreeVisitor.h  ParseTreeWalker.cpp  ParseTreeWalker.h  TerminalNode.h  TerminalNodeImpl.cpp  TerminalNodeImpl.h  Trees.cpp  Trees.h
compiler-runtime/runtime/tests/: Utf8Test.cpp
compiler/Driver/: CompilerDriver.cpp  CompilerDriver.h  CompilerOptions.h  TranslationUnit.h
compiler/SemanticAnalyzer/: .SemanticAnalyzer.cpp.swp  .SemanticAnalyzer.h.swp  SemanticAnalyzer.cpp  SemanticAnalyzer.h
compiler/SymbolTable/: Symbol.cpp  Symbol.h
(+36 files in other folders)
